# MyGL

./: .gitignore  CMakeLists.txt  CMakeSettings.json
res/: settings.xml
src/: generator.cpp
